--- a/sweep.yaml
+++ b/sweep.yaml
@@ -9,10 +9,11 @@ command:
   - ${program}
   - ${args}
 
-method: bayes
+method: grid
 metric:
   goal: maximize
   name: final_score
+
 parameters:
   # model_name:
   #   values:
@@ -22,28 +23,38 @@ parameters:
     max: 2
     min: 1
     distribution: int_uniform
+    
   seq_len:
-    distribution: q_log_uniform_values
-    q: 2
-    max: 8
-    min: 1
+    values:
+      - 1
+      - 2
+      - 4
+      - 6
+      - 8
+    distribution: categorical
 
-  acc_grad_batches:
-    distribution: q_log_uniform_values
-    q: 2
-    max: 32
-    min: 4
+  accumulate_grad_batches:
+    values:
+      - 4
+      - 8
+      - 16
+      - 32
+    distribution: categorical
+
   dropout:
     distribution: uniform
     max: 0.5
     min: 0.1
+
   max_epochs:
     values:
       - 8
       - 16
       - 32
+      - 48
     distribution: categorical
-    
+
+  
     
   # og_path:
   #   values:
@@ -57,5 +68,3 @@ parameters:
     values:
       - 32585
       - 42
-
-  
