--- a/vega_convn_sweep.yaml
+++ b/vega_convn_sweep.yaml
@@ -55,7 +55,7 @@ parameters:
       - 48
     distribution: categorical
 
-  og_path:
+  og_checkpoint:
     value:
       - ./DFGC-1st-2022-model/convnext_xlarge_384_in22ft1k_30.pth
     distribution: constant
