--- a/vega_convn_sweep.yaml
+++ b/vega_convn_sweep.yaml
@@ -6,9 +6,13 @@ command:
   - ${env}
   # - echo
   - python3
-  - ${program} --devices [0,1,2,3] --dataset_root /ceph/hpc/data/st2207-pgp-users/ldragar/dataset/ 
+  - ${program}
+  - "--devices"
+  - [0,1,2,3]
+  - "--dataset_root"
+  - "/ceph/hpc/data/st2207-pgp-users/ldragar/dataset/"
   - ${args}
- 
+
 
 
 method: random
