--- a/vega_convn_sweep.yaml
+++ b/vega_convn_sweep.yaml
@@ -18,7 +18,7 @@ command:
 
 
 
-method: grid
+method: bayes
 metric:
   goal: maximize
   name: final_score
@@ -35,6 +35,8 @@ parameters:
       - 4
       - 8
       - 16
+    distribution: categorical
+    
     
   seq_len:
     values:
@@ -55,9 +57,15 @@ parameters:
     distribution: categorical
 
   dropout:
-    distribution: uniform
-    max: 0.7
-    min: 0.1
+    distribution: categorical
+    values:
+      - 0.1
+      - 0.2
+      - 0.3
+      - 0.4
+      - 0.5
+      - 0.6
+      - 0.7
 
   max_epochs:
     values:
