--- a/eva_imagesS.yaml
+++ b/eva_imagesS.yaml
@@ -8,6 +8,11 @@ command:
   - python3
   - ${program}
   - ${args}
+  - "--devices"
+  - "0"
+  - "1"
+  - "2"
+  - "3"
 
 
 
@@ -32,7 +37,6 @@ parameters:
     values:
       - 4
       - 10
-      - 20
 
     distribution: categorical
 
@@ -59,6 +63,12 @@ parameters:
       - "mae"
     distribution: categorical
 
+  augmentation:
+    values:
+      - True
+      - False
+    distribution: categorical
+
 
   
 
@@ -72,6 +82,7 @@ parameters:
   seed:
     values:
       - 69
+      - 26
       - -1
 
 
