--- a/eva_imagesS.yaml
+++ b/eva_imagesS.yaml
@@ -5,6 +5,13 @@ program: train_eva_images.py
 command:
   - ${env}
   # - echo
+  - srun
+  - "--nodes=1"
+  - "--cpus-per-task=12"
+  - "--gpus=4"
+  - "-p gpu"
+  - "--ntasks-per-node=4"
+  - "--exclusive"
   - python3
   - ${program}
   - ${args}
