--- a/eva_imagesS.yaml
+++ b/eva_imagesS.yaml
@@ -80,13 +80,26 @@ parameters:
 
     distribution: categorical
 
+  augment_prob:
+    values:
+      - 0.5
+      - 0.9
+    distribution: categorical
+
   val_split:
     values:
       - 0.1
     distribution: categorical
+
+  drop_path_rate:
+    values:
+      - 0.0
+      - 0.1
+      - 0.2
   
   seed:
     values:
+      - 420
       - -1
     distribution: categorical
   
