--- a/eva_imagesS.yaml
+++ b/eva_imagesS.yaml
@@ -1,5 +1,5 @@
 project: luka_vra
-name: vega_eva_images3
+name: vega_eva_images4
 program: train_eva_images.py
 
 command:
@@ -22,7 +22,6 @@ command:
   - "3"
 
 
-
 method: random
 metric:
   goal: minimize
@@ -36,15 +35,15 @@ parameters:
   batch_size:
     values:
       - 1
-      - 2
+      - 8
     distribution: categorical
     
     
   seq_len:
     values:
-      - 4
-      - 10
+      - 8
       - 16
+      - 32
 
     distribution: categorical
 
@@ -63,6 +62,7 @@ parameters:
     values:
       - 16
       - 32
+      - 48
     distribution: categorical
 
   loss:
@@ -97,13 +97,24 @@ parameters:
     values:
       - 0.1
     distribution: categorical
+
+  weight_decay:
+    values:
+      - 0.01
+      - 0.1
+      - 0.001
+    distribution: categorical
   
   seed:
     values:
-      - 420
       - -1
+      - 1126
     distribution: categorical
 
+  seed:
+    values:
+      - -1
+    distribution: categorical
 
    
 
